force-app/main/default/objects/First_Class_Flow__c/First_Class_Flow__c.object-meta.xml
<CustomObject>
    <label>First Class Flow</label>
    <nameField>
        <label>First Class Flow</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>First Class Flow</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>