force-app/main/default/objects/First_Class_Flow__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Answer</label>
    <type>TextArea</type>
</CustomField>