force-app/main/default/objects/First_Class_Flow__c/fields/Answer_New__c.field-meta.xml
<CustomField>
    <fullName>Answer_New__c</fullName>
    <label>Answer (New)</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>