force-app/main/default/objects/First_Class_Flow__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FCAR</fullName>
            </value>
            <value>
                <fullName>HYLG</fullName>
            </value>
            <value>
                <fullName>LAPS</fullName>
            </value>
            <value>
                <fullName>LIMO</fullName>
            </value>
            <value>
                <fullName>THCR</fullName>
            </value>
            <value>
                <fullName>ONMO</fullName>
            </value>
            <value>
                <fullName>SGCR</fullName>
            </value>
            <value>
                <fullName>PXMO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>