force-app/main/default/objects/First_Class_Flow__c/fields/CED_s_Conclusion__c.field-meta.xml
<CustomField>
    <fullName>CED_s_Conclusion__c</fullName>
    <label>CED&apos;s Conclusion</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>