force-app/main/default/objects/First_Class_Flow__c/fields/SVS_s_Status__c.field-meta.xml
<CustomField>
    <fullName>SVS_s_Status__c</fullName>
    <label>SVS&apos;s Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending for Investigation</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Highlight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>